UNRELEASED  ts-klassen  <qrpc@su-shiki.com>

	* VERSION: 0.2.0
	Added q_vvx_worker with dynamic speaker model loading and wake queue flow.
	Updated super_simple_tts job routing for per-speaker queues.


2025-12-25  ts-klassen  <qrpc@su-shiki.com>

	* VERSION: 0.1.0
	Initial setup.