@@ -11,6 +11,7 @@ rand = "0.8"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tlgrf = { git = "https://github.com/ts-klassen/tlgrf" }
 tokio = { version = "1", features = ["macros", "rt", "sync"] }
 toml = "0.8"
 tracing = "0.1"
